fix: 355 - removed letter-spacing

--- a/src/shared/ui/paragraph/paragraph.module.scss
+++ b/src/shared/ui/paragraph/paragraph.module.scss
@@ -2,7 +2,6 @@
   margin: 0;
   line-height: 28px;
   color: $color-gray-600;
-  letter-spacing: 0;
 
   &.medium-font-size {
     padding-bottom: 18px;
